--- a/app/src/main/res/layout/activity_patient_group_manage.xml
+++ b/app/src/main/res/layout/activity_patient_group_manage.xml
@@ -9,51 +9,63 @@
 
     <include layout="@layout/top_title" />
 
-    <View
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginTop="@dimen/space_15"
-        android:background="@color/color_ececec" />
+        android:layout_height="wrap_content">
 
-    <RelativeLayout
-        android:id="@+id/rlAddPatientGroup"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:background="@color/white"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/ivAddIcon"
-            android:layout_width="15dp"
-            android:layout_height="15dp"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="@dimen/space_30"
-            android:src="@mipmap/ic_add_patient_group" />
-
-        <TextView
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="@dimen/space_10"
-            android:layout_toRightOf="@id/ivAddIcon"
-            android:text="@string/add_patient_group"
-            android:textColor="@color/black" />
-    </RelativeLayout>
+            android:orientation="vertical">
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/color_efefef" />
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="@dimen/space_15"
+                android:background="@color/color_ececec" />
 
-    <ui.swipemenulistview.SwipeMenuListView
-        android:id="@+id/lvPatientGroup"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@color/white"
-        android:layout_marginTop="@dimen/space_15"
-        android:divider="@color/color_dfdfdf"
-        android:dividerHeight="1dp">
+            <RelativeLayout
+                android:id="@+id/rlAddPatientGroup"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:background="@color/white"
+                android:orientation="horizontal">
 
-    </ui.swipemenulistview.SwipeMenuListView>
+                <!-- <ImageView
+                     android:id="@+id/ivAddIcon"
+                     android:layout_width="15dp"
+                     android:layout_height="15dp"
+                     android:layout_centerVertical="true"
+                     android:layout_marginLeft="@dimen/space_30"
+                     android:src="@mipmap/ic_add_patient_group" />-->
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="@dimen/space_30"
+                    android:text="@string/add_patient_group"
+                    android:textColor="@color/black" />
+            </RelativeLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/color_efefef" />
+
+            <ui.swipemenulistview.SwipeMenuListView
+                android:id="@+id/lvPatientGroup"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/space_15"
+                android:background="@color/white"
+                android:divider="@color/color_dfdfdf"
+                android:dividerHeight="1dp">
+
+            </ui.swipemenulistview.SwipeMenuListView>
+        </LinearLayout>
+
+    </ScrollView>
+
 
 </LinearLayout>
