--- a/app/src/main/res/layout/dialog_add_check_sycle.xml
+++ b/app/src/main/res/layout/dialog_add_check_sycle.xml
@@ -1,152 +1,189 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:background="#eeeeee"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:layout_marginLeft="@dimen/space_40"
     android:layout_marginRight="@dimen/space_40"
-    android:padding="@dimen/space_10"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:background="@color/white"
+    android:paddingBottom="10dp"
+    android:orientation="vertical">
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:gravity="center"
+        android:background="@color/color_home_topbar"
+        android:text="添加检查周期"
+        android:textColor="@color/white"
+        android:textSize="@dimen/text_size_16" />
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:background="#e5e5e5" />
 
     <LinearLayout
-        android:background="@color/white"
         android:layout_width="match_parent"
-        android:layout_height="50dp">
+        android:layout_height="50dp"
+        android:background="@color/white">
+
         <TextView
+            android:layout_width="90dp"
+            android:layout_height="match_parent"
+            android:gravity="center"
             android:text="检查项名称"
-            style="@style/medicine_left_title"
-            android:layout_height="match_parent" />
+            android:textSize="@dimen/text_size_16" />
+
+        <View
+            android:layout_width="1px"
+            android:layout_height="match_parent"
+            android:background="#ededed" />
+
         <EditText
             android:id="@+id/etName"
-            android:text=""
-            android:background="@color/transparent"
-            android:layout_marginLeft="@dimen/space_20"
-            android:gravity="center_vertical|left"
-            android:textSize="@dimen/text_size_16"
-            android:paddingLeft="5dp"
             android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="@dimen/space_20"
             android:layout_weight="1"
-            android:layout_height="match_parent" />
+            android:background="@color/transparent"
+            android:gravity="center_vertical|left"
+            android:paddingLeft="5dp"
+            android:text=""
+            android:textSize="@dimen/text_size_16" />
     </LinearLayout>
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#e5e5e5"/>
+        android:layout_height="1px"
+        android:background="#e5e5e5" />
 
     <LinearLayout
-        android:background="@color/white"
         android:layout_width="match_parent"
-        android:layout_height="50dp">
+        android:layout_height="50dp"
+        android:background="@color/white">
+
         <TextView
+            android:layout_width="90dp"
+            android:layout_height="match_parent"
+            android:gravity="center"
             android:text="检查项周期"
-            style="@style/medicine_left_title"
-            android:layout_height="match_parent" />
+            android:textSize="@dimen/text_size_16" />
+
+        <View
+            android:layout_width="1px"
+            android:layout_height="match_parent"
+            android:background="#ededed" />
+
         <TextView
             android:id="@+id/tvSycle"
-            android:text="1周"
-            android:gravity="center"
-            android:background="@color/transparent"
-            android:layout_marginLeft="@dimen/space_20"
-            android:textSize="@dimen/text_size_16"
             android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="@dimen/space_20"
             android:layout_weight="1"
-            android:layout_height="match_parent" />
+            android:background="@color/transparent"
+            android:gravity="center"
+            android:text="1周"
+            android:textSize="@dimen/text_size_16" />
+
         <ImageButton
             android:id="@+id/ibSelectSycle"
-            android:src="@mipmap/icon_down_arrow"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
             android:layout_marginRight="@dimen/space_15"
             android:background="@color/transparent"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent" />
+            android:src="@mipmap/icon_down_arrow" />
     </LinearLayout>
-    
-    
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:background="#e5e5e5" />
+
     <LinearLayout
         android:id="@+id/llSelectSycle"
-        android:visibility="gone"
-        android:orientation="vertical"
-        android:background="@color/white"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:orientation="vertical"
+        android:visibility="gone">
+
         <TextView
             android:id="@+id/tvSycle1"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/space_40"
+            android:background="@color/color_dcdcdc"
+            android:gravity="center"
             android:text="1周"
             android:textColor="#737373"
-            android:textSize="@dimen/text_size_16"
-            android:gravity="center"
-            android:background="@color/color_dcdcdc"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/space_40" />
+            android:textSize="@dimen/text_size_16" />
+
         <TextView
             android:id="@+id/tvSycle2"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/space_40"
+            android:layout_marginTop="1dp"
+            android:background="@color/color_dcdcdc"
+            android:gravity="center"
             android:text="2周"
             android:textColor="#737373"
-            android:textSize="@dimen/text_size_16"
-            android:layout_marginTop="1dp"
-            android:gravity="center"
-            android:background="@color/color_dcdcdc"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/space_40" />
+            android:textSize="@dimen/text_size_16" />
+
         <TextView
             android:id="@+id/tvSycle4"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/space_40"
+            android:layout_marginTop="1dp"
+            android:background="@color/color_dcdcdc"
+            android:gravity="center"
             android:text="4周"
             android:textColor="#737373"
-            android:textSize="@dimen/text_size_16"
-            android:layout_marginTop="1dp"
-            android:gravity="center"
-            android:background="@color/color_dcdcdc"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/space_40" />
+            android:textSize="@dimen/text_size_16" />
+
         <TextView
             android:id="@+id/tvSycle8"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/space_40"
+            android:layout_marginTop="1dp"
+            android:background="@color/color_dcdcdc"
+            android:gravity="center"
             android:text="8周"
             android:textColor="#737373"
-            android:textSize="@dimen/text_size_16"
-            android:layout_marginTop="1dp"
-            android:gravity="center"
-            android:background="@color/color_dcdcdc"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/space_40" />
+            android:textSize="@dimen/text_size_16" />
 
     </LinearLayout>
 
 
     <LinearLayout
-        android:layout_marginTop="20dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp">
 
         <TextView
             android:id="@+id/tvOk"
-            android:text="确认"
-            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/space_35"
             android:layout_marginLeft="@dimen/space_20"
             android:layout_marginRight="@dimen/space_20"
-            android:textSize="@dimen/text_size_20"
-            android:textColor="@color/white"
-            android:background="@color/color_btn_bg"
-            android:layout_width="match_parent"
             android:layout_weight="1"
-            android:layout_height="@dimen/space_35" />
+            android:background="@color/color_home_topbar"
+            android:gravity="center"
+            android:text="确认"
+            android:textColor="@color/white"
+            android:textSize="@dimen/text_size_20" />
 
         <TextView
             android:id="@+id/tvCancel"
-            android:text="取消"
-            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/space_35"
             android:layout_marginLeft="@dimen/space_20"
             android:layout_marginRight="@dimen/space_20"
-            android:textColor="@color/white"
-            android:textSize="@dimen/text_size_20"
-            android:background="@color/color_btn_bg"
-            android:layout_width="match_parent"
             android:layout_weight="1"
-            android:layout_height="@dimen/space_35" />
+            android:background="@color/color_home_topbar"
+            android:gravity="center"
+            android:text="取消"
+            android:textColor="@color/white"
+            android:textSize="@dimen/text_size_20" />
 
 
     </LinearLayout>
-
-
 
 
 </LinearLayout>
