--- a/app/src/main/res/layout/item_health_tips_child.xml
+++ b/app/src/main/res/layout/item_health_tips_child.xml
@@ -1,140 +1,106 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:background="@color/white"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@color/white"
+    android:orientation="vertical">
 
     <LinearLayout
-        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
         <TextView
-            android:text="推送时间"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:gravity="center_vertical|left"
             android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:text="推送时间"
             android:textSize="@dimen/text_size_16" />
-        <LinearLayout
-            android:layout_weight="1"
-            android:orientation="vertical"
-            android:layout_width="match_parent"
+
+        <View
+            android:layout_width="1px"
             android:layout_height="match_parent"
-            android:layout_marginLeft="10dp">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <TextView
-                    android:text="第"
-                    android:gravity="center"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent" />
-                <EditText
-                    android:id="@+id/etDay"
-                    android:text="1"
-                    android:maxLength="3"
-                    android:background="@color/transparent"
-                    android:gravity="center"
-                    android:layout_width="50dp"
-                    android:layout_height="40dp" />
-                <TextView
-                    android:text="天"
-                    android:gravity="center"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent" />
-            </LinearLayout>
+            android:background="#ededed" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:layout_height="wrap_content">
 
             <TextView
-                android:text="注：推送时间从随访方案关联随访患者后开始计算"
-                android:textSize="@dimen/text_size_14"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:text="第" />
+
+            <EditText
+                android:id="@+id/etDay"
+                android:layout_width="50dp"
+                android:layout_height="40dp"
+                android:background="@color/transparent"
+                android:gravity="center"
+                android:maxLength="3"
+                android:text="1" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:text="天" />
         </LinearLayout>
+
     </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:background="#ededed" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:gravity="center"
+        android:text="注：推送时间从随访方案关联随访患者后开始计算"
+        android:textSize="@dimen/text_size_12" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:background="#ededed" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
-        <TextView
-            android:text="饮食指导"
-            android:gravity="center_vertical"
-            android:paddingLeft="15dp"
-            android:textSize="@dimen/text_size_16"
-            android:layout_width="match_parent"
-            android:layout_height="40dp" />
-        <EditText
-            android:id="@+id/etFood"
-            android:paddingLeft="@dimen/space_15"
-            android:paddingRight="@dimen/space_15"
-            android:background="@color/transparent"
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:gravity="left|top" />
-    </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
         <TextView
-            android:text="运动指导"
-            android:gravity="center_vertical"
-            android:paddingLeft="15dp"
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:textSize="@dimen/text_size_16" />
-        <EditText
-            android:id="@+id/etSport"
-            android:paddingLeft="@dimen/space_15"
-            android:paddingRight="@dimen/space_15"
-            android:background="@color/transparent"
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:gravity="left|top"/>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-        <TextView
-            android:text="睡眠指导"
             android:gravity="center_vertical"
             android:paddingLeft="15dp"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:text="建议指导"
             android:textSize="@dimen/text_size_16" />
-        <EditText
-            android:id="@+id/etSleep"
-            android:paddingLeft="@dimen/space_15"
-            android:paddingRight="@dimen/space_15"
-            android:background="@color/transparent"
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:gravity="left|top" />
-    </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-        <TextView
-            android:text="其他指导或建议"
-            android:gravity="center_vertical"
-            android:paddingLeft="15dp"
+        <View
             android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:textSize="@dimen/text_size_16" />
+            android:layout_height="1px"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:background="#ededed" />
+
         <EditText
             android:id="@+id/etOther"
-            android:paddingLeft="@dimen/space_15"
-            android:paddingRight="@dimen/space_15"
-            android:background="@color/transparent"
             android:layout_width="match_parent"
             android:layout_height="100dp"
-            android:gravity="left|top" />
+            android:background="@color/transparent"
+            android:gravity="left|top"
+            android:hint="您可对患者的饮食、运动、注意事项等进行描述"
+            android:textSize="@dimen/text_size_14"
+            android:paddingLeft="@dimen/space_15"
+            android:paddingRight="@dimen/space_15" />
     </LinearLayout>
-            
+
 </LinearLayout>
