--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -126,7 +126,13 @@
         <item name="android:textColor">@color/text_color_white</item>
         <item name="android:textSize">@dimen/text_size_18</item>
     </style>
-
+    <style name="btn_title_blue">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">40dp</item>
+        <item name="android:background">@drawable/btn_bg_selecter</item>
+        <item name="android:textColor">@color/text_color_white</item>
+        <item name="android:textSize">@dimen/text_size_18</item>
+    </style>
     <style name="follow_text_20">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
@@ -203,8 +209,10 @@
         <item name="android:gravity">center_vertical</item>
         <item name="android:textSize">@dimen/text_size_14</item>
         <item name="android:textColor">#747474</item>
+        <item name="android:layout_marginRight">5dp</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_marginLeft">40dp</item>
+        <item name="android:drawableRight">@mipmap/icon_down_arrow</item>
         <item name="android:layout_weight">1</item>
         <item name="android:layout_height">match_parent</item>
     </style>
