--- a/app/src/main/res/layout/patient_simple_info.xml
+++ b/app/src/main/res/layout/patient_simple_info.xml
@@ -1,18 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/llPatientSimpleInfo"
     android:layout_width="match_parent"
     android:layout_height="70dp"
-    android:id="@+id/llPatientSimpleInfo"
     android:gravity="center_vertical"
     android:orientation="horizontal"
     android:paddingLeft="@dimen/space_23"
     android:paddingRight="@dimen/space_23">
 
-    <ImageView
-        android:id="@+id/ivPatientPortrait"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:background="@mipmap/portrait_man" />
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:id="@+id/ivPatientPortrait"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_centerInParent="true"
+            android:background="@mipmap/portrait_man" />
+
+        <ImageView
+            android:id="@+id/ivPatientPro"
+            android:layout_width="40dp"
+            android:layout_height="20dp"
+            android:visibility="gone"
+            android:paddingBottom="@dimen/space_6"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:src="@mipmap/icon_project" />
+    </RelativeLayout>
+
 
     <LinearLayout
         android:layout_width="0dp"
@@ -31,8 +48,8 @@
                 android:id="@+id/tvPatientFollowTime"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
                 android:layout_alignParentRight="true"
-                android:layout_alignParentBottom="true"
                 android:text="2016-03-19 09:35"
                 android:textColor="@color/black"
                 android:textSize="@dimen/text_size_11" />
@@ -40,9 +57,10 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="horizontal"
-                android:gravity="bottom"
-                android:layout_toLeftOf="@id/tvPatientFollowTime">
+                android:layout_toLeftOf="@id/tvPatientFollowTime"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
                 <TextView
                     android:id="@+id/tvPatientName"
                     android:layout_width="wrap_content"
