--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -216,7 +216,17 @@
         <item name="android:layout_weight">1</item>
         <item name="android:layout_height">match_parent</item>
     </style>
-
+    <!--方案中的周期，右边-->
+    <style name="plan_cycle_right_title_no_icon">
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:textSize">@dimen/text_size_14</item>
+        <item name="android:textColor">#747474</item>
+        <item name="android:layout_marginRight">5dp</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_marginLeft">40dp</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:layout_height">match_parent</item>
+    </style>
     <!-- 病历左 -->
     <style name="case_report_left">
         <item name="android:paddingLeft">@dimen/space_15</item>
