--- a/app/src/main/res/drawable/check_box_bg.xml
+++ b/app/src/main/res/drawable/check_box_bg.xml
@@ -2,6 +2,6 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:drawable="@mipmap/checkbox_checked" android:state_checked="true"/>
-    <item android:drawable="@mipmap/checkbox_unchecked"></item>
+    <item android:drawable="@mipmap/checkbox_unchecked" android:state_checked="false"/>
 
 </selector>
